--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>George's Portfolio</title>
+    <title>George's Amazing Portfolio</title>
     <meta content="a great website" name="description" />
     <meta content="" name="keywords" />
 
