--- a/index.html
+++ b/index.html
@@ -55,17 +55,19 @@
       <div class="d-flex flex-column">
         <div class="profile">
           <img
-            src="assets/img/profile-img.jpg"
+            src="assets/img/Headshot.jpg"
             alt=""
             class="img-fluid rounded-circle"
           />
-          <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+          <h1 class="text-light"><a href="index.html">George Perry</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
             <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
             <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+            <a href="https://www.linkedin.com/in/georgeeperry/" class="linkedin"
+              ><i class="bx bxl-linkedin"></i
+            ></a>
           </div>
         </div>
 
@@ -114,12 +116,13 @@
       class="d-flex flex-column justify-content-center align-items-center"
     >
       <div class="hero-container" data-aos="fade-in">
-        <h1>Alex Smith</h1>
+        <h1>George Perry&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h1>
+        <h3>Full-Stack Software Engineer</h3>
         <p>
-          I'm
+          I'm a
           <span
             class="typed"
-            data-typed-items="Designer, Developer, Freelancer, Photographer"
+            data-typed-items=" Creator, Problem-Solver, Developer, Trailblazer"
           ></span>
         </p>
       </div>
@@ -133,19 +136,27 @@
           <div class="section-title">
             <h2>About</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              As a full-stack software engineer with years of coursework and
+              project experience, I approach life with an inquisitive mindset
+              and never underestimate the impact of challenging what's possible.
+              My background in both technology and consulting has cultivated my
+              unique ability to understand complex client/user needs and develop
+              innovative solutions. I aim to surround myself with peers who are
+              equally motivated to tackle today's most complex challenges.
             </p>
           </div>
 
           <div class="row">
             <div class="col-lg-4" data-aos="fade-right">
-              <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+              <img
+                src="assets/img/Headshot.jpg"
+                class="img-fluid"
+                id="about-pic"
+                alt=""
+              />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-              <h3>UI/UX Designer &amp; Web Developer.</h3>
+              <h3>Front-End &amp; Back-End Software Engineer</h3>
               <p class="fst-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -410,7 +421,7 @@
             <div class="col-lg-6" data-aos="fade-up">
               <h3 class="resume-title">Sumary</h3>
               <div class="resume-item pb-0">
-                <h4>Alex Smith</h4>
+                <h4>George Perry</h4>
                 <p>
                   <em
                     >Innovative and deadline-driven Graphic Designer with 3+
@@ -1079,16 +1090,10 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container">
-        <div class="copyright">
+        <!-- <div class="copyright">
           &copy; Copyright <strong><span>iPortfolio</span></strong>
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+        </div> -->
+        <div class="credits"></div>
       </div>
     </footer>
     <!-- End  Footer -->
