deleted part of about section

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </p>
           </div>
 
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-lg-4" data-aos="fade-right">
               <img
                 src="assets/img/Headshot.jpg"
@@ -220,7 +220,7 @@
                 culpa magni laudantium dolores.
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <!-- End About Section -->
