about picture somewhat functioning

--- a/index.html
+++ b/index.html
@@ -59,14 +59,27 @@
             alt=""
             class="img-fluid rounded-circle"
           />
-          <h1 class="text-light"><a href="index.html">George Perry</a></h1>
+          <h1 class="text-light">
+            <a href="index.html">George Perry</a>
+          </h1>
+          <p id="job-description">Full-Stack Software Engineer</p>
+
           <div class="social-links mt-3 text-center">
             <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
             <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
             <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
             <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-            <a href="https://www.linkedin.com/in/georgeeperry/" class="linkedin"
+            <a
+              href="https://www.linkedin.com/in/georgeeperry/"
+              class="linkedin"
+              target="_blank"
               ><i class="bx bxl-linkedin"></i
+            ></a>
+            <a
+              href="https://github.com/georgeperryv"
+              class="github"
+              target="_blank"
+              ><i class="bx bxl-github"></i
             ></a>
           </div>
         </div>
@@ -118,12 +131,12 @@
     >
       <div class="hero-container" data-aos="fade-in">
         <h1>George Perry&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h1>
-        <h3>Full-Stack Software Engineer</h3>
+        <!-- <h3>Full-Stack Software Engineer</h3> -->
         <p>
           I'm a
           <span
             class="typed"
-            data-typed-items=" Creator, Problem-Solver, Developer, Trailblazer"
+            data-typed-items=" Full-Stack Software Engineer, Developer, Creator, Problem-Solver, Trailblazer"
           ></span>
         </p>
       </div>
@@ -136,20 +149,48 @@
         <div class="container">
           <div class="section-title">
             <h2>About</h2>
-            <p>
-              As a full-stack software engineer with years of coursework and
-              project experience, I approach life with an inquisitive mindset
-              and never underestimate the impact of challenging what's possible.
-              My background in both technology and consulting has cultivated my
-              unique ability to communicate effectively with clients to
-              understand complex needs and develop innovative solutions. I aim
-              to surround myself with peers who are equally motivated to tackle
-              today's most complex challenges. <br /><br />Personally, I am
-              learning the guitar and continuing to practice Spanish after
-              studying abroad in Argentina. I'm an avid tennis player and skier
-              who loves a great game of chess, origami, and learning about the
-              newest Web3 project.
-            </p>
+            <div class="about-layout">
+              <div id="white-shirt-img">
+                <img
+                  src="assets/img/Headshot.jpg"
+                  class="img-fluid"
+                  id="about-pic"
+                  alt=""
+                />
+              </div>
+
+              <p>
+                I'm someone who embraces the journey and looks at life as an
+                adventure. This year I made a massive career shift, going from
+                life-sciences consulting to full-stack software engineering and
+                it has come with its fair share of challenges, but an even
+                greater amount of fulfillment. I think I always knew I had the
+                passion and skillset to be a great engineer, but it wasn't until
+                I was honest with myself that I was able to make that leap of
+                faith. <br /><br />
+                After some experience with technical classes in high school and
+                college, I knew I needed a project-based, intensive course to
+                prepare me for the tech industry and I wanted to approach this
+                new challenge with dedication and intentionality. As a result, I
+                attended a coding bootcamp which consisted of 10+ hours of
+                coding per day for three months. I'm astonished by how much I
+                was able to learn and create by surrounding myself with driven,
+                intelligent colleauges and mentors. <br /><br />
+                I can't wait to carry this momentum forward as I look to push
+                the boundaries of what is possible in the tech industry and
+                create real-world value. As a consultant for 2+ years, I know I
+                will bring a unique perspective and skillset to any team I join.
+                Now, after spending months refining my technical skills, I am
+                ready to stay inquisitive and tackle the world's complex
+                problems.
+
+                <br /><br />Personally, I love learning the guitar and
+                continuing to practice Spanish after studying abroad in
+                Argentina. I'm an avid tennis player and skier who enojys a
+                great game of chess, origami, and learning about the newest Web3
+                project.
+              </p>
+            </div>
           </div>
 
           <!-- <div class="row">
