need to reset the portfolio pics and make them all the same size

--- a/index.html
+++ b/index.html
@@ -160,14 +160,15 @@
               </div>
 
               <p>
-                I'm someone who embraces the journey and looks at life as an
-                adventure. This year I made a massive career shift, going from
-                life-sciences consulting to full-stack software engineering and
-                it has come with its fair share of challenges, but an even
-                greater amount of fulfillment. I think I always knew I had the
-                passion and skillset to be a great engineer, but it wasn't until
-                I was honest with myself that I was able to make that leap of
-                faith. <br /><br />
+                I'm someone who tries to embrace the journey and look at life as
+                an adventure. This year I made a massive career shift, going
+                from life-sciences consulting to full-stack software
+                engineering. It has come with its fair share of challenges, but
+                an even greater level of fulfillment. I think I always knew I
+                had the passion and skillset to be a great engineer, but it
+                wasn't until I was honest with myself that I was able to make
+                that leap of faith.
+                <br /><br />
                 After some experience with technical classes in high school and
                 college, I knew I needed a project-based, intensive course to
                 prepare me for the tech industry and I wanted to approach this
@@ -188,7 +189,10 @@
                 continuing to practice Spanish after studying abroad in
                 Argentina. I'm an avid tennis player and skier who enojys a
                 great game of chess, origami, and learning about the newest Web3
-                project.
+                project. <br /><br />
+                Please reach out to me if you think my expertise could be of
+                value to you or someone you know! Email:
+                george.e.perry5@gmail.com
               </p>
             </div>
           </div>
@@ -358,9 +362,10 @@
             <h2>Skills</h2>
             <p>
               Through computer science education in high school and college as
-              well as an intensive, project based bootcamp, I have acquired many
-              technical skills which have enabled the creation of complex,
-              full-stack project showcased in my portfolio.
+              well as an intensive, project-based coding bootcamp (General
+              Assembly), I have acquired many technical skills which have
+              enabled the creation of complex, full-stack project showcased by
+              my portfolio.
             </p>
           </div>
 
@@ -483,6 +488,32 @@
             </div>
           </div>
 
+          <div id="grid">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/Guitarc.png" class="img-fluid" alt="" />
+              <div class="portfolio-links">
+                <a
+                  href="https://github.com/georgeperryv/Guitarc"
+                  target="_blank"
+                  >GitHub</a
+                >
+                <a
+                  href="https://guitarc.herokuapp.com/"
+                  target="_blank"
+                  title="More Details"
+                  ><i class="bx bx-link"></i
+                ></a>
+                  </div><span class="description-text">
+              (React, JavaScript, CSS, Express, Node, Mongoose, MongoDB) •
+              Engineered a full-stack MERN web application called Guitarc
+              allowing logged-in users to manage their guitar learning by
+              uploading chord images (stored in AWS S3) to songs and playlists
+              utilizing back end (MongoDB) and front end (react, bootstrap,
+              CSS) integration
+            </span></div>
+          </div>
+
           <div
             class="row portfolio-container"
             data-aos="fade-up"
@@ -507,10 +538,10 @@
                     title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
-                </div>
-                (JavaScript, HTML, CSS) An advanced game of Tic-Tac-Toe
+                </div><span class="description-text"><span class="description-text">
+                (JavaScript, HTML, CSS) • An advanced game of Tic-Tac-Toe
                 incorporating computer player logic and score tracking
-              </div>
+              </span></div>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
@@ -528,11 +559,11 @@
                     title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
-                </div>
-                (JavaScript, HTML, CSS, DOM) Fully functional game of Checkers
+                </div class="description-text"><span class="description-text">
+                (JavaScript, HTML, CSS, DOM) • Fully functional game of Checkers
                 incorporating move assistance, visual piece capturing, and
                 infinite jump logic
-              </div>
+              </span></div>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
@@ -554,12 +585,12 @@
                     title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
-                </div>
-                (JavaScript, HTML, CSS, Express, Node, Mongoose, MongoDB) A web
+                </div class="description-text"><span class="description-text">
+                (JavaScript, HTML, CSS, Express, Node, Mongoose, MongoDB) • A web
                 application giving authenticated users the ability to save
                 potential ski destinations and post/view reviews across profiles
                 while incorporating full CRUD capabilities
-              </div>
+              </span></div>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
@@ -581,38 +612,14 @@
                     title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
-                </div>
-                (Python, EJS, Django, PostgreSQL) Collaborated with a team of 4
+                </div class="description-text"> <span class="description-text">
+                (Python, EJS, Django, PostgreSQL) • Collaborated with a team of 4
                 to develop an end-to-end job board with an algorithm to match a
                 logged-in user’s technical skills with prospective jobs from a
                 job-listing API
-              </div>
+              </span></div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-              <div class="portfolio-wrap">
-                <img src="assets/img/Guitarc.png" class="img-fluid" alt="" />
-                <div class="portfolio-links">
-                  <a
-                    href="https://github.com/georgeperryv/Guitarc"
-                    target="_blank"
-                    >GitHub</a
-                  >
-                  <a
-                    href="https://guitarc.herokuapp.com/"
-                    target="_blank"
-                    title="More Details"
-                    ><i class="bx bx-link"></i
-                  ></a>
-                </div>
-                (React, JavaScript, CSS, Express, Node, Mongoose, MongoDB) •
-                Engineered a full-stack MERN web application called Guitarc
-                allowing logged-in users to manage their guitar learning by
-                uploading chord images (stored in AWS S3) to songs and playlists
-                utilizing back end (MongoDB) and front end (react, bootstrap,
-                CSS) integration
-              </div>
-            </div>
 
             <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
@@ -703,6 +710,7 @@
             </div> -->
           </div>
         </div>
+      </div>
       </section>
       <!-- End Portfolio Section -->
       <!-- ======= Resume Section ======= -->
