images resized except for ski planner

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
           <div id="grid">
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/Guitarc.png" class="img-fluid" alt="" />
+              <img src="assets/img/guitarc-resized.png" class="img-fluid" alt="" />
               <div class="portfolio-links">
                 <a
                   href="https://github.com/georgeperryv/Guitarc"
@@ -522,7 +522,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/Tic-Tac-Toe.png"
+                  src="assets/img/Tic-Tac-Toe2.png"
                   class="img-fluid"
                   alt=""
                 />
@@ -546,7 +546,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/img/Checkers1.png" class="img-fluid" alt="" />
+                <img src="assets/img/Checkers2.png" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
                     href="https://github.com/georgeperryv/Checkers"
@@ -596,7 +596,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/Perfect-Match.png"
+                  src="assets/img/Perfect-Match3.png"
                   class="img-fluid"
                   alt=""
                 />
